// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser da-u-ca-gregory-ca-buddhist should be valid 1`] = `
Object {
  "extensions": Array [
    Object {
      "attributes": Array [],
      "keywords": Array [
        Array [
          "ca",
          "gregory",
        ],
      ],
      "type": "u",
    },
  ],
  "lang": Object {
    "lang": "da",
    "region": undefined,
    "script": undefined,
    "variants": Array [],
  },
}
`;

exports[`parser de-Latn-DE-u-ca-gregory-co-phonebk-hc-h23-kf-kn-false-nu-latn should be valid 1`] = `
Object {
  "extensions": Array [
    Object {
      "attributes": Array [],
      "keywords": Array [
        Array [
          "ca",
          "gregory",
        ],
        Array [
          "co",
          "phonebk",
        ],
        Array [
          "hc",
          "h23",
        ],
        Array [
          "kf",
          "",
        ],
        Array [
          "kn",
          "false",
        ],
        Array [
          "nu",
          "latn",
        ],
      ],
      "type": "u",
    },
  ],
  "lang": Object {
    "lang": "de",
    "region": "DE",
    "script": "Latn",
    "variants": Array [],
  },
}
`;

exports[`parser en-Latn-fonipa should be valid 1`] = `
Object {
  "extensions": Array [],
  "lang": Object {
    "lang": "en",
    "region": undefined,
    "script": "Latn",
    "variants": Array [
      "fonipa",
    ],
  },
}
`;

exports[`parser en-a-bar-x-u-foo should be valid 1`] = `
Object {
  "extensions": Array [
    Object {
      "type": "a",
      "value": "bar",
    },
    Object {
      "type": "x",
      "value": "u-foo",
    },
  ],
  "lang": Object {
    "lang": "en",
    "region": undefined,
    "script": undefined,
    "variants": Array [],
  },
}
`;

exports[`parser en-u-foo-bar-nu-thai-ca-buddhist-kk-true should be valid 1`] = `
Object {
  "extensions": Array [
    Object {
      "attributes": Array [
        "bar",
        "foo",
      ],
      "keywords": Array [
        Array [
          "ca",
          "buddhist",
        ],
        Array [
          "kk",
          "",
        ],
        Array [
          "nu",
          "thai",
        ],
      ],
      "type": "u",
    },
  ],
  "lang": Object {
    "lang": "en",
    "region": undefined,
    "script": undefined,
    "variants": Array [],
  },
}
`;

exports[`parser fr-Latn-CA-u-ca-gregory-co-standard-hc-h11-kf-kn-false-nu-latn should be valid 1`] = `
Object {
  "extensions": Array [
    Object {
      "attributes": Array [],
      "keywords": Array [
        Array [
          "ca",
          "gregory",
        ],
        Array [
          "co",
          "standard",
        ],
        Array [
          "hc",
          "h11",
        ],
        Array [
          "kf",
          "",
        ],
        Array [
          "kn",
          "false",
        ],
        Array [
          "nu",
          "latn",
        ],
      ],
      "type": "u",
    },
  ],
  "lang": Object {
    "lang": "fr",
    "region": "CA",
    "script": "Latn",
    "variants": Array [],
  },
}
`;

exports[`parser ja-Jpan-JP-u-ca-japanese-co-search-hc-h24-kf-false-kn-nu-jpanfin should be valid 1`] = `
Object {
  "extensions": Array [
    Object {
      "attributes": Array [],
      "keywords": Array [
        Array [
          "ca",
          "japanese",
        ],
        Array [
          "co",
          "search",
        ],
        Array [
          "hc",
          "h24",
        ],
        Array [
          "kf",
          "false",
        ],
        Array [
          "kn",
          "",
        ],
        Array [
          "nu",
          "jpanfin",
        ],
      ],
      "type": "u",
    },
  ],
  "lang": Object {
    "lang": "ja",
    "region": "JP",
    "script": "Jpan",
    "variants": Array [],
  },
}
`;
